Re-fix nav bar spacing

--- a/frontend/src/css/components/feed.scss
+++ b/frontend/src/css/components/feed.scss
@@ -77,7 +77,7 @@
         overflow-x: hidden;
         width: 100%;
         height: 100%;
-        padding: 0px 20px 100px;
+        padding: 0px 20px 40px;
 
         .feed-dreams-container {
             width: 90%;
