--- a/frontend/src/css/components/main.scss
+++ b/frontend/src/css/components/main.scss
@@ -4,8 +4,8 @@
             position: fixed;
             display: flex;
             justify-content: center;
-            // align-items: center;
-            padding-top: 10px;
+            align-items: center;
+            margin-top: -64px;
             height: 100%;
             width: 100%;
             // background-repeat: no-repeat;
